--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
         />
         <title>Portfolio</title>
         <link rel="stylesheet" href="./styles/style.min.css" />
+        <link rel="icon" href="./img/favicon.svg" type="image/svg+xml" />
     </head>
     <body>
         <header class="header">
